@@ -1,3 +1,8 @@
+2006-05-26  Ulrich Weigand  <uweigand@de.ibm.com>
+
+	PR rtl-optimization/27661
+	* gcc.dg/pr27661.c: New test case.
+
 2006-05-26  Thomas Koenig  <Thomas.Koenig@online.de>
 
 	PR fortran/23151
